# dicozorus

./: .pre-commit-config.yaml  README.md  lazy.txt  pyproject.toml
.github/workflows/: generate-wordlist.yml
src/dicozorus/: __init__.py  __main__.py  dicozorus.py
src/dicozorus/core/: check.py  feeder.py  generator.py  initializer.py  modify.py  stats.py
src/dicozorus/db/: database.py
src/dicozorus/model/: entry.py  wordlist.py
src/dicozorus/parser/: dicozorus.py  dirsearch.py  patator.py  wordlist.py
src/dicozorus/utils/: colors.py  logging.py  set.py  url.py
src/dicozorus/wordlists/: bo0om.wordlist  critical.wordlist  dangerous.wordlist  dirsearch.wordlist  exploitdb.wordlist  hackerone.wordlist  high.wordlist  info.wordlist  low.wordlist  medium.wordlist  seen.wordlist  unranked.wordlist
tests/: test_dicozorus.py
